--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   provider: ^4.3.2
   uuid: ^2.0.4
+  sqflite:
+  path:
 
 
   # The following adds the Cupertino Icons font to your application.
